fixed crt route, added swagger descriptions
