# backend/swagger-output.json
@@ -62,7 +62,7 @@
         "tags": [
           "URLs"
         ],
-        "description": "",
+        "description": "Uses IPQS API for safety info ",
         "parameters": [
           {
             "name": "url",
@@ -91,44 +91,12 @@
         }
       }
     },
-    "/api/check-crt": {
-      "get": {
-        "tags": [
-          "URLs"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "url",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          },
-          "502": {
-            "description": "Bad Gateway"
-          }
-        }
-      }
-    },
     "/api/check-vt": {
       "get": {
         "tags": [
           "URLs"
         ],
-        "description": "",
+        "description": "Uses Virus Total Api to see safety info ",
         "parameters": [
           {
             "name": "url",
@@ -154,12 +122,38 @@
         "tags": [
           "URLs"
         ],
-        "description": "",
+        "description": "Uses Google Safe Browsing API to see if page is safe ",
         "parameters": [
           {
             "name": "url",
             "in": "path",
             "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/check-crt": {
+      "get": {
+        "tags": [
+          "URLs"
+        ],
+        "description": "Returns certificate info ",
+        "parameters": [
+          {
+            "name": "domain",
+            "in": "query",
             "type": "string"
           }
         ],
